--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ src="https://www.facebook.com/tr?id=1090872152492201&ev=PageView&noscript=1"
         <div class="col-md-6 mx-auto text-center">
             <h2 class="header">ASIA'S NO 1 TIPPER</h2>
             <h1 class="main"><i class="fa-solid fa-crown" style="color: rgba(246, 198, 7, 0.947);"></i> IQBAL SHARJAH ORIGINAL <i class="fa-solid fa-crown"  style="color: rgba(246, 198, 7, 0.947);"></i></h1>
-            <a href="https://t.me/+imAL31TtWIRiYWE1" target="_blank" class="telegram-button">
-                <i class="https://t.me/+-kVd1sYCFPFiYWQ1"></i>  
+            <a href="https://t.me/+-kVd1sYCFPFiYWQ1" target="_blank" class="telegram-button">
+                <i class="fa-brands fa-telegram"></i>  
                 JOIN NOW FOR FREE
             </a> 
             
